# cdek

./: main.py  pyproject.toml
cdek/: __init__.py  _base.py  deliverypoint.py  location.py  token.py
cdek/calculator/: __init__.py  schemas.py  views.py
cdek/deliverypoint/: __init__.py  schemas.py  views.py
cdek/location/: __init__.py  schemas.py  views.py
cdek/tests/: conftest.py  test_location.py
