[project]
name = "cdek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]

[tool.mypy]
igmore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests", ".venv"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",    
]